<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ColorfulFloater">
    <item android:id="@+id/action_number_of_block"
        android:orderInCategory="100"
        android:title="@string/action_number_of_block">
        <menu >
            <item
                android:id="@+id/three_block"
                android:title="@string/three_block" />
            <item
                android:id="@+id/four_block"
                android:title="@string/four_block" />
            <item
                android:id="@+id/five_block"
                android:title="@string/five_block" />
            <item
                android:id="@+id/six_block"
                android:title="@string/six_block" />
            <item
                android:id="@+id/seven_block"
                android:title="@string/seven_block" />
        </menu>
    </item>

    <item
        android:id="@+id/action_select_level"
        android:orderInCategory="100"
        android:title="@string/action_select_level">
        <menu >
            <item
                android:id="@+id/level_one"
                android:title="@string/level_one" />
            <item
                android:id="@+id/level_two"
                android:title="@string/level_two" />
            <item
                android:id="@+id/level_three"
                android:title="@string/level_three" />
        </menu>
    </item>
</menu>
